k8s/02-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-validator
  namespace: devops-exam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validator-api
  template:
    metadata:
      labels:
        app: validator-api
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000

      containers:
      - name: validator-api
        image: secure-validator-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: log-storage
          mountPath: /app/logs

      volumes:
      - name: log-storage
        emptyDir: {}
