k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: validator-svc
  namespace: devops-exam
spec:
  selector:
    app: validator-api
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
